Fix/#26 - 후기 전체 조회 오류 수정